--- a/src/NotepadNext/dialogs/PreferencesDialog.ui
+++ b/src/NotepadNext/dialogs/PreferencesDialog.ui
@@ -77,6 +77,12 @@
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="labelAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
      <item row="0" column="1">
       <widget class="QComboBox" name="comboBoxTranslation"/>
      </item>
