Add overtype toggling
Closes #582

--- a/src/NotepadNext/dialogs/MainWindow.ui
+++ b/src/NotepadNext/dialogs/MainWindow.ui
@@ -1349,6 +1349,20 @@
     <string>Alt+Shift+9</string>
    </property>
   </action>
+  <action name="actionToggleOverType">
+   <property name="text">
+    <string>Toggle Overtype</string>
+   </property>
+   <property name="toolTip">
+    <string>Toggle Overtype</string>
+   </property>
+   <property name="shortcut">
+    <string>Ins</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::NoRole</enum>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
