Add Abaqus syntax support. (#831)

--- a/src/NotepadNext/scripts.qrc
+++ b/src/NotepadNext/scripts.qrc
@@ -87,5 +87,6 @@
         <file>languages/go.lua</file>
         <file>languages/markdown.lua</file>
         <file>languages/nix.lua</file>
+        <file>languages/abaqus.lua</file>
     </qresource>
 </RCC>
